# mrdoom

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  post-build.sh  theme.json  tsconfig.json
.github/workflows/: build.yaml  merge-main-with-prod.yaml
client/: api.ts  index.html
client/components/: ModFileSelector.tsx
client/src/: App.tsx  index.css
client/src/components/: GameCard.tsx  GameSettingsModal.tsx  Header.tsx  LaunchOptions.tsx  ModFileList.tsx  ModFileSelector.tsx  SettingsDialog.tsx  SettingsModal.tsx  Sidebar.tsx  ViewToggle.tsx
client/src/icons/: DoomIcons.tsx
client/src/lib/: fileService.ts  gameService.ts  moddbService.ts  utils.ts
client/src/pages/: GamesPage.tsx  InstallPage.tsx  ModDBPage.tsx
client/src/types/: tauri.d.ts
scripts/: bump-version.mjs
server/: api.ts  devIndex.ts  gameConfig.ts  gameService.ts  index.ts  initStorage.ts  routes.ts  server-package.json  server.js  static.ts  storage.ts  utils.ts  vite.ts
server/services/: fileService.ts  gameService.ts  moddbService.ts
server/src/routes/: mods.ts
server/src/storage/: mods.ts  versions.ts
shared/: schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: dialog.toml
src-tauri/src/: lib.rs  main.rs
src/components/: ModFileSelector.tsx
src/pages/: InstallPage.tsx
src/renderer/components/: ModFileSelector.tsx
src/services/: settingsService.ts
